# godot-django-server

django/: manage.py  pyproject.toml  requirements.txt
django/chat/: consumers.py  models.py
django/chat/migrations/: 0001_initial.py
django/godot/: settings.py  wsgi.py
godot/: Node2D.gd  Node2D.tscn  godot-websocket.pck  project.godot
